# pico-bazel-freertos

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
FreeRTOS-Config/: BUILD.bazel  FreeRTOSConfig.h
